Fixed table heading contrast

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -6122,7 +6122,7 @@ a:hover {
 }
 
 tr:first-child th {
-  background: #aaa;
+  background: #666;
   color: #fff;
 }
 
