--- a/assets/scss/_themes/_tables.scss
+++ b/assets/scss/_themes/_tables.scss
@@ -1,4 +1,4 @@
 tr:first-child th {
-    background: #aaa;
+    background: #666;
     color: #fff;
 }
